Add NCHS data calibration pipeline, real-time API integrations, and class-balanced federated training

--- a/about.html
+++ b/about.html
@@ -35,6 +35,7 @@
         --bg-grad-2: #123b2c;
       }
       * { box-sizing: border-box; }
+      html { overflow-y: scroll; }
       body {
         font-family: "Manrope", "Avenir Next", sans-serif;
         margin: 0;
@@ -43,20 +44,19 @@
                     radial-gradient(900px 500px at 120% 20%, var(--bg-grad-2) 0%, transparent 60%),
                     var(--bg);
         min-height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
         padding: 32px;
+        overflow-x: hidden;
       }
       .card {
         width: min(900px, 100%);
+        margin: 0 auto;
         background: var(--glass);
         backdrop-filter: blur(18px);
         border-radius: 20px;
         padding: 28px 30px;
         box-shadow: var(--shadow);
         border: 1px solid var(--card-border);
-        animation: rise 600ms ease-out both;
+        animation: rise 600ms ease-out forwards;
       }
       h1 { margin: 0 0 8px; font-size: 26px; letter-spacing: 0.2px; }
       .muted { color: var(--muted); font-size: 14px; }
@@ -108,7 +108,7 @@
       .box p { margin: 0; font-size: 14px; line-height: 1.5; }
       @keyframes rise {
         from { transform: translateY(12px); opacity: 0; }
-        to { transform: translateY(0); opacity: 1; }
+        to { transform: none; opacity: 1; }
       }
     </style>
   </head>
