--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         --bg-grad-2: #123b2c;
       }
       * { box-sizing: border-box; }
+      html { overflow-y: scroll; }
       body {
         font-family: "Manrope", "Avenir Next", sans-serif;
         margin: 0;
@@ -43,13 +44,12 @@
                     radial-gradient(900px 500px at 120% 20%, var(--bg-grad-2) 0%, transparent 60%),
                     var(--bg);
         min-height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
         padding: 32px;
+        overflow-x: hidden;
       }
       .shell {
         width: min(980px, 100%);
+        margin: 0 auto;
         display: grid;
         gap: 20px;
         grid-template-columns: 1.2fr 0.8fr;
@@ -61,7 +61,7 @@
         padding: 28px 30px;
         box-shadow: var(--shadow);
         border: 1px solid var(--card-border);
-        animation: rise 600ms ease-out both;
+        animation: rise 600ms ease-out forwards;
       }
       .card:nth-child(2) { animation-delay: 120ms; }
       h1 { margin: 0 0 8px; font-size: 26px; letter-spacing: 0.2px; }
@@ -155,7 +155,7 @@
       .caption { margin-top: 10px; font-size: 13px; color: var(--muted); }
       @keyframes rise {
         from { transform: translateY(12px); opacity: 0; }
-        to { transform: translateY(0); opacity: 1; }
+        to { transform: none; opacity: 1; }
       }
       @media (max-width: 820px) {
         .shell { grid-template-columns: 1fr; }
