--- a/metrics.html
+++ b/metrics.html
@@ -35,6 +35,7 @@
         --bg-grad-2: #123b2c;
       }
       * { box-sizing: border-box; }
+      html { overflow-y: scroll; }
       body {
         font-family: "Manrope", "Avenir Next", sans-serif;
         margin: 0;
@@ -43,12 +44,10 @@
                     radial-gradient(900px 500px at 120% 20%, var(--bg-grad-2) 0%, transparent 60%),
                     var(--bg);
         min-height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
         padding: 32px;
+        overflow-x: hidden;
       }
-      .shell { width: min(1050px, 100%); display: grid; gap: 20px; }
+      .shell { width: min(1050px, 100%); display: grid; gap: 20px; margin: 0 auto; }
       .card {
         background: var(--glass);
         backdrop-filter: blur(18px);
@@ -56,7 +55,7 @@
         padding: 28px 30px;
         box-shadow: var(--shadow);
         border: 1px solid var(--card-border);
-        animation: rise 600ms ease-out both;
+        animation: rise 600ms ease-out forwards;
       }
       .tabs {
         display: flex;
@@ -163,7 +162,7 @@
       .empty { margin-top: 14px; font-size: 13px; color: var(--muted); }
       @keyframes rise {
         from { transform: translateY(12px); opacity: 0; }
-        to { transform: translateY(0); opacity: 1; }
+        to { transform: none; opacity: 1; }
       }
       @keyframes spin { to { transform: rotate(360deg); } }
       @media (max-width: 820px) { body { padding: 20px; } }
