--- a/metrics.html
+++ b/metrics.html
@@ -65,13 +65,11 @@
     }
 
     .shell {
-      width: min(1050px, 100%);
+      width: min(980px, 100%);
+      margin: 0 auto;
       display: grid;
       gap: 20px;
-      margin: 0 auto;
-      margin-top: 5vh;
-      /* Prevent layout jumps */
-      contain: layout;
+      grid-template-columns: 1.2fr 0.8fr;
     }
 
     .card {
@@ -81,9 +79,66 @@
       padding: 28px 30px;
       box-shadow: var(--shadow);
       border: 1px solid var(--card-border);
-      /* Use a more stable animation that doesn't affect document flow as much */
-      animation: rise 600ms cubic-bezier(0.16, 1, 0.3, 1) forwards;
-      will-change: transform, opacity;
+      animation: rise 600ms ease-out forwards;
+    }
+
+    .card:nth-child(2) {
+      animation-delay: 120ms;
+    }
+
+    h1 {
+      margin: 0 0 8px;
+      font-size: 26px;
+      letter-spacing: 0.2px;
+    }
+
+    .pill {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      padding: 6px 12px;
+      border-radius: 999px;
+      background: rgba(58, 160, 255, 0.12);
+      color: #1b4b91;
+      font-weight: 600;
+      font-size: 13px;
+      margin-bottom: 12px;
+    }
+
+    .muted {
+      color: var(--muted);
+      font-size: 14px;
+      margin-top: 8px;
+    }
+
+    .mini {
+      display: grid;
+      gap: 12px;
+    }
+
+    .stat {
+      padding: 14px 16px;
+      border-radius: 14px;
+      background: var(--stat-bg);
+    }
+
+    .stat h3 {
+      margin: 0 0 6px;
+      font-size: 14px;
+      color: var(--muted);
+    }
+
+    .stat p {
+      margin: 0;
+      font-weight: 700;
+    }
+
+    .badge {
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      background: linear-gradient(135deg, var(--accent), var(--accent-2));
+      box-shadow: 0 0 0 6px rgba(58, 160, 255, 0.1);
     }
 
     .tabs {
@@ -127,22 +182,16 @@
       cursor: pointer;
     }
 
-    h1 {
-      margin: 0;
-      font-size: 26px;
-    }
-
-    .muted {
-      color: var(--muted);
-      font-size: 14px;
-      margin-top: 6px;
-    }
-
     .grid {
       margin-top: 18px;
       display: grid;
       gap: 18px;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      grid-template-columns: 1fr;
+    }
+
+    [data-theme="dark"] .pill {
+      color: var(--accent);
+      background: rgba(58, 160, 255, 0.08);
     }
 
     .orbital {
@@ -325,6 +374,7 @@
         </div>
         <button class="theme-toggle" id="theme-toggle" type="button">Dark</button>
       </div>
+      <div class="pill"><span class="badge"></span>Live: Metrics Observatory</div>
       <h1>Metrics Observatory</h1>
       <div class="muted">Orbiting indicators and radial spokes for the latest training results.</div>
       <div class="grid">
@@ -437,6 +487,39 @@
           state to compare local maternal health outcomes against national baselines.</div>
       </div>
     </div>
+
+    <div class="card mini">
+      <div class="stat">
+        <h3>Device</h3>
+        <p>CPU</p>
+      </div>
+      <div class="stat">
+        <h3>Hospitals</h3>
+        <p>3</p>
+      </div>
+      <div class="stat">
+        <h3>Features</h3>
+        <p>25</p>
+      </div>
+      <div class="stat">
+        <h3>Predictions served</h3>
+        <p id="pred-count">128</p>
+      </div>
+      <div class="stat">
+        <h3>Training rounds</h3>
+        <p id="round-count">5</p>
+      </div>
+      <div class="stat">
+        <h3>Latest model</h3>
+        <p id="model-ver">v3</p>
+        <span class="note">Download requires backend</span>
+      </div>
+      <div class="stat">
+        <h3>NCHS Calibration</h3>
+        <p id="calib-status">Checking...</p>
+        <span class="note">Based on 2022 dataset</span>
+      </div>
+    </div>
   </div>
   <script>
     const root = document.documentElement;
@@ -461,39 +544,53 @@
 
     async function updateMetrics() {
       try {
-        const response = await fetch('/api/history');
-        const raw = await response.text();
-        if (raw === lastHistoryJSON) return;
-        lastHistoryJSON = raw;
+        // 1. Fetch Training History for Gauges
+        const historyRes = await fetch('/api/history');
+        const rawText = await historyRes.text();
+        if (rawText !== lastHistoryJSON) {
+          lastHistoryJSON = rawText;
+          const history = JSON.parse(rawText);
+          if (history && history.length > 0) {
+            const latest = history[history.length - 1];
+            document.getElementById("loss-value").textContent = latest.loss.toFixed(3);
+            document.getElementById("acc-value").textContent = `Test Accuracy: ${latest.accuracy.toFixed(3)}`;
 
-        const history = JSON.parse(raw);
-        if (history && history.length > 0) {
-          const latest = history[history.length - 1];
-
-          // Map values to display
-          document.getElementById("loss-value").textContent = latest.loss.toFixed(3);
-          document.getElementById("acc-value").textContent = `Test Accuracy: ${latest.accuracy.toFixed(3)}`;
-
-          // If AUC/F1/Prec/Rec are available in history
-          if (latest.auc) {
-            document.getElementById("auc-value").textContent = latest.auc.toFixed(3);
-            document.getElementById("f1-value").textContent = `F1: ${latest.f1.toFixed(3)}`;
-            document.getElementById("precision-value").textContent = latest.precision.toFixed(3);
-            document.getElementById("recall-value").textContent = `Recall: ${latest.recall.toFixed(3)}`;
-
-            setGauge(document.getElementById("gauge-loss-acc"), latest.loss, latest.accuracy);
-            setGauge(document.getElementById("gauge-auc-f1"), latest.auc, latest.f1);
-            setGauge(document.getElementById("gauge-prec-rec"), latest.precision, latest.recall);
-          } else {
-            // Fallback if only loss/acc are present
-            setGauge(document.getElementById("gauge-loss-acc"), Math.min(1, latest.loss), latest.accuracy);
+            if (latest.auc) {
+              document.getElementById("auc-value").textContent = latest.auc.toFixed(3);
+              document.getElementById("f1-value").textContent = `F1: ${latest.f1.toFixed(3)}`;
+              document.getElementById("precision-value").textContent = latest.precision.toFixed(3);
+              document.getElementById("recall-value").textContent = `Recall: ${latest.recall.toFixed(3)}`;
+              setGauge(document.getElementById("gauge-loss-acc"), latest.loss, latest.accuracy);
+              setGauge(document.getElementById("gauge-auc-f1"), latest.auc, latest.f1);
+              setGauge(document.getElementById("gauge-prec-rec"), latest.precision, latest.recall);
+            } else {
+              setGauge(document.getElementById("gauge-loss-acc"), Math.min(1, latest.loss), latest.accuracy);
+            }
+            document.querySelector(".empty").textContent = `Last updated: ${new Date().toLocaleTimeString()}`;
+            document.getElementById("round-count").textContent = history.length;
           }
-
-          document.querySelector(".empty").textContent = `Last updated: ${new Date().toLocaleTimeString()}`;
         }
+
+        // 2. Fetch System Stats
+        const statsRes = await fetch('/api/stats');
+        const stats = await statsRes.json();
+        if (stats) {
+          document.getElementById("pred-count").textContent = stats.predictions_served || 0;
+          document.getElementById("model-ver").textContent = stats.latest_model_version ? stats.latest_model_version.split('_v')[1] || stats.latest_model_version : "v3";
+        }
+
+        // 3. Fetch Calibration Status
+        const calibRes = await fetch('/api/v1/data/calibration-status');
+        const calib = await calibRes.json();
+        if (calib && calib.status === 'success') {
+          document.getElementById('calib-status').textContent = 'Live & Active';
+          document.getElementById('calib-status').style.color = '#6dd3a0';
+        } else {
+          document.getElementById('calib-status').textContent = 'Pending';
+        }
+
       } catch (e) {
         console.error("Failed to fetch metrics:", e);
-        document.querySelector(".empty").textContent = "Error fetching live metrics. Using cached/demo view.";
       }
     }
 
